<resources>
    <string name="app_name">KepmmiApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="category">Kategori</string>
    <string name="image_slider">Gambar Slider</string>
    <string name="kegiatan_baru">Kegiatan Terbaru</string>
    <string name="email">Email</string>
    <string name="login_label">Login</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="create_account">Buat Akun</string>
    <string name="already_have_account">Sudah Punya Akun? Login</string>
    <string name="register">Daftar</string>
    <string name="daftar">Daftar Anggota</string>
    <string name="profil">Profil</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="info">Info</string>
    <string name="galeri">Galeri</string>
    <string name="loading">Loading...</string>
    <string name="image_kegiatan_label">Gambar Kegiatan</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rekrutmen_anggota">Rekrutmen Anggota KEPMMI</string>
    <string name="description_rekrutmen_anggota">Pendaftaran Anggota baru telah dibuka!</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="periode_daftar">%1$s - %2$s</string>
    <string name="periode_aktif">Aktif</string>
    <string name="periode_nonaktif">Tidak Aktif</string>
    <string name="alamat">Alamat</string>
    <string name="tempat_lahir">Tempat lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="asal_kampus">Asal Kampus</string>
    <string name="jurusan">Jurusan</string>
    <string name="angkatan_akademik">Angkatan Akademik</string>
    <string name="asal_daerah">Asal Daerah</string>
    <string name="submit_pendaftaran">Submit Pendaftaran</string>
    <string name="informasi_profil">Informasi Profil</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="logout">Logout</string>
    <string name="content_desc_pamflet">Pamflet</string>
    <string name="logo_organisasi">Logo Organisasi</string>
    <string name="ringkasan_organisasi">Ringkasan Organisasi</string>
    <string name="resources_organisasi">Sumber Daya</string>
    <string name="download_buku_saku">Unduh Buku Saku</string>
    <string name="download_pedoman_intern">Unduh Pedoman Intern</string>
    <string name="registrasi_anggota">Registrasi Anggota</string>
    <string name="registrasi_anggota_label">Silahkan verifikasi data diri Anda untuk Registrasi Anggota</string>
    <string name="data_diri">Data Diri Pendaftaran</string>
    <string name="incomplete_profile_label">Data Profil Anda belum lengkap. Silakan lengkapi profil Anda terlebih dahulu sebelum mendaftar</string>
    <string name="no_account_yet">Belum punya akun? Daftar</string>
    <string name="error_field_fullname">Nama lengkap tidak boleh kosong</string>
    <string name="error_field_email">Email tidak boleh kosong</string>
    <string name="error_field_password">Kata Sandi tidak boleh kosong</string>
    <string name="error">Error</string>
    <string name="see_all">Lihat Semua</string>
    <string name="empty_kegiatan_data">Tidak ada Data Kegiatan.</string>
    <string name="subtitle_registrasi_anggota">Pastikan semua data Anda sudah benar sebelum daftar</string>
    <string name="edit_profi">Edit Profi</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="foto_pengurus_label">Foto Pengurus</string>
    <string name="pamflet">Pamflet</string>
    <string name="unavailable_periode_rekrutmen_date">Belum ada periode rekrutmen yang tersedia.</string>
    <string name="unavailable_periode_rekrutmen_status">Tidak Tersedia</string>
    <string name="periode_rekrutmen_date">%1$s - %2$s</string>
    <string name="riwayat_pendaftaran_anggota_label">Riwayat Pendaftaran Anggota</string>
    <string name="tanggal_registrasi_anggota_label">Tanggal Daftar: %1$s</string>
    <string name="cancel_registrasi_anggota_label">Batalkan Pendaftaran</string>
    <string name="pamflet_image_label">Gambar Pamflet</string>
    <string name="share_to_whatsapp_label">Share ke WhatsApp</string>
    <string name="bidang_organisasi_label">Bidang</string>
    <string name="struktur_organisasi_image_label">Gambar Struktur Organisasi</string>
</resources>