<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_kegiatan"
        android:icon="@drawable/ic_library_books"
        android:title="@string/kegiatan" />

    <item
        android:id="@+id/navigation_page"
        android:icon="@drawable/ic_stacks"
        android:title="@string/info" />

    <item
        android:id="@+id/navigation_pamflet"
        android:icon="@drawable/ic_photo_library"
        android:title="@string/galeri" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profil" />


</menu>